--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://vaibhaviparsekar.github.io/my-portfolio",
+  
+  "homepage": "https://vaibhavi-parsekar.github.io/my-portfolio",
+
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
